# proto2thrift

./: .gitignore  CMakeLists.txt  api.h  lex.l  p2t_driver.cpp  p2t_driver.h  p2t_parser.y  test
